# dikto

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  build-app.sh  deny.toml  install.sh  notarize.sh  package-dmg.sh  package-lock.json  package.json  tsconfig.json
.claude/skills/release/: SKILL.md
.github/workflows/: audit.yml  build.yml  distribution-test.yml  release.yml  test.yml
DiktoApp/Resources/: AppIcon.icns  Info.plist
DiktoApp/Sources/: AppState.swift  DiktoApp.swift  MenuBarView.swift  OnboardingView.swift  PermissionView.swift  RecordingOverlay.swift  SettingsView.swift  Theme.swift
SottoApp/Sources/: AppState.swift  MenuBarView.swift  PermissionView.swift
crates/dikto-cli/: Cargo.toml
crates/dikto-cli/src/: main.rs  setup.rs
crates/dikto-core/: Cargo.toml
crates/dikto-core/src/: audio.rs  config.rs  engine.rs  lib.rs  models.rs  transcribe.rs  vad.rs
crates/dikto-core/tests/: audio_tests.rs  config_tests.rs  engine_tests.rs  lib_tests.rs  models_tests.rs  transcribe_tests.rs  vad_tests.rs
crates/sotto-core/: Cargo.toml
crates/sotto-core/examples/: listen.rs
crates/sotto-core/src/: audio.rs  clipboard.rs  config.rs  lib.rs  models.rs  transcribe.rs  vad.rs
crates/sotto-mcp/: Cargo.toml
crates/sotto-mcp/src/: main.rs  mcp.rs  setup.rs
docs/: index.html
src/: config.ts  indicator.ts  recorder.ts  server.ts  setup.ts  stream-transcriber.ts  transcriber.ts  types.ts
test/: indicator.test.ts  recorder.test.ts  server.test.ts  stream-transcriber.test.ts  transcriber.test.ts
