[workspace]
members = ["crates/dikto-core", "crates/dikto-cli", "crates/uniffi-bindgen"]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
license = "MIT"
authors = ["Sourabh"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
