[package]
name = "dikto-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "dikto"
path = "src/main.rs"

[dependencies]
dikto-core = { path = "../dikto-core" }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
indicatif = "0.17"
