[package]
name = "dikto-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "dikto_core"

[dependencies]
uniffi = "0.29"
parakeet-rs = "0.2"
whisper-rs = "0.13"
ort = "=2.0.0-rc.10"
cpal = "0.15"
voice_activity_detector = "0.2.1"
ringbuf = "0.4"
reqwest = { version = "0.12", features = ["stream"] }
dirs = "6"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
