[package]
name = "sotto-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "sotto_core"

[features]
default = ["metal"]
metal = ["whisper-rs/metal"]

[dependencies]
whisper-rs = "0.15"
cpal = "0.15"
voice_activity_detector = "0.2"
ringbuf = "0.4"
reqwest = { version = "0.12", features = ["stream"] }
dirs = "6"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
indicatif = "0.17"
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
